--- a/CSS/website.css
+++ b/CSS/website.css
@@ -4,6 +4,12 @@ body {
     font-family: system-ui;
     max-width: 1350px;
 }
+.text-div-mar {
+    display: flex;
+}
+.div-madia-flex {
+    display: flex;
+}
 a {
     text-decoration: none;
     color: black;
@@ -51,7 +57,7 @@ header {
 }
 .text-welcome-morrison-h1 {
     color: white;
-    margin: 0px;
+    margin: 0px 0px 0px 0px;
     padding: 185px 0px 0px 115px;
     font-size: 44px;
 }
@@ -162,10 +168,12 @@ header {
 .text-morrison-code-h1-1 {
     font-size: 15.5px;
     margin: 100px 0px 0px 15px;
+    width: 230px;
 }
 .text-morrison-code-p-1 {
     font-size: 14.5px;
     margin: 12px 0px 0px 15px;
+    width: 230px;
 }
 .image-morrison-code-2 {
     width: 45px;
@@ -174,10 +182,12 @@ header {
 }
 .morison-code-div-2 {
     display: flex;
+    width: 230px;
 }
 .text-morrison-code-h1-2 {
     font-size: 15.5px;
     margin: 20px 0px 0px 15px;
+    width: 230px;
 }
 .text-morrison-code-p-2 {
     font-size: 14.5px;
@@ -190,14 +200,18 @@ header {
 }
 .morison-code-div-3 {
     display: flex;
+    width: 350px;
+    margin: 0px 0px 0px 0px;
 }
 .text-morrison-code-h1-3 {
     font-size: 15.5px;
     margin: 100px 0px 0px 15px;
+    width: 230px;
 }
 .text-morrison-code-p-3 {
     font-size: 14.5px;
     margin: 12px 119px 0px 15px;
+    width: 230px;
 }
 .image-morrison-code-4 {
     width: 45px;
@@ -206,14 +220,18 @@ header {
 }
 .morison-code-div-4 {
     display: flex;
+    width: 430px;
+    margin: 0px 0px 0px 0px;
 }
 .text-morrison-code-h1-4 {
     font-size: 15.5px;
     margin: 65px 0px 0px 15px;
+    width: 230px;
 }
 .text-morrison-code-p-4 {
     font-size: 14.5px;
     margin: 10px 89px 100px 15px;
+    width: 230px;
 }
 .Blue-text-h1 {
     color: blue;
@@ -229,16 +247,15 @@ header {
     background: rgba(0, 0, 0, 0.03);
 }
 .text-h1 {
-    margin: 0px;
     margin: 145px 0px 145px 115px;
     font-size: 25px;
 }
 .Blue-text-h1 {
-    width: 510px;
-    margin: 0px 10px 0px 0px;
+    width: 385px;
 }
 .text-blue-h1 {
     display: flex;
+    width: 450px;
 }
 .image-brend {
     height: 150px;
@@ -261,6 +278,7 @@ header {
 .text-p {
     font-size: 18px;
     margin: 0px 0px 0px 0px;
+    width: 600px;
 }
 .image {
     margin: 0px 50px 0px 115px;
@@ -359,6 +377,7 @@ header {
     font-size: 20px;
     margin: 50px 0px 0px 115px;
     color: white;
+    width: 320px;
 }
 .text-p-Email {
     font-size: 15px;
@@ -392,16 +411,18 @@ header {
 }
 .input-button {
     display: flex;
-    margin: 80px 0px 0px 440px;
+    margin: 80px 0px 0px 420px;
 }
 .WEB {
     display: flex;
 }
 .WEB-h1 {
     margin: 100px 0px 0px 115px;
+    width: 500px;
 }
 .WEB-p {
     margin: 40px 0px 0px 115px;
+    width: 350px;
 }
 .WEB-button {
     margin: 30px 0px 0px 115px;
@@ -589,7 +610,7 @@ header {
     }
     .image-header {
         height: 40px;
-        padding: 0px 0px 0px 140px;
+        padding: 0px 0px 0px 160px;
         margin: 0px;
     }
     .text-header {
@@ -644,9 +665,13 @@ header {
     }
     .morison-code-div-3 {
         display: block;
+        width: 160px;
+        margin: 0px;
     }
     .morison-code-div-4 {
         display: block;
+        width: 160px;
+        margin: 0px;
     }
     .background-gray {
         margin: 0px 0px 0px 0px;
@@ -987,9 +1012,16 @@ header {
         font-size: 12px;
         padding: 2px 0px 0px 0px;
      }
+     .text-div-mar {
+        display: block;
+    }
+    .text-blue-h1 {
+        display: flex;
+        width: 350px;
+    }
 }
 
-@media (max-width: 1460px) {
+@media (max-width: 1366px) {
     .menu__btn > span {
         opacity: 0;
      }
@@ -1021,7 +1053,7 @@ header {
     align-items: center;  /* центрируем содержимое кнопки */
     position: fixed;
     top: 13px;
-    left: 230px;
+    left: 260px;
     width: 26px;
     height: 26px;
     cursor: pointer;
@@ -1035,7 +1067,7 @@ header {
     position: absolute;
     width: 100%;
     height: 2px;
-    background: #afafaf;
+    background: #a1a1a1;
   }
   .menu__btn > span::before {
     content: '';
@@ -1055,7 +1087,7 @@ header {
     width: 300px;
     height: 100%;
     margin: 0px 0px 0px 0px;
-    padding: 80px 0px 80px 0px;
+    padding: 80px 25px 80px 20px;
     list-style: none;
     text-align: center;
     background-color: #ECEFF1;
