--- a/CSS/website.css
+++ b/CSS/website.css
@@ -1083,8 +1083,8 @@ header {
     position: fixed;
     visibility: hidden;
     top: 0;
-    left: -100%;
-    width: 300px;
+    left: 0;
+    width: 100%;
     height: 100%;
     margin: 0px 0px 0px 0px;
     padding: 80px 25px 80px 20px;
